--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,5 +1,7 @@
+@import "colors.css";
+
 * {
-    font-family: JetBrainsMono Nerd Font;
+    font-family: "JetBrainsMono Nerd Font";
     font-size: 13px;
     min-height: 0;
     padding-right: 2px;
@@ -16,7 +18,7 @@
 #workspaces {
   border-radius: 10px 10px 10px 10px;
   margin: 5px;
-  background: #101010;
+  background: @background;
   margin-left: 0.1rem;
 }
 
@@ -47,7 +49,7 @@
 #language,
 #custom-lock,
 #custom-power {
-  background-color: #101010;
+  background-color: @background;
   padding: 0.5rem 1rem;
   margin: 5px 0;
   border-radius: 10px 10px 10px 10px;
