--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,5 +1,3 @@
-@import "colors.css";
-
 * {
     font-family: "JetBrainsMono Nerd Font";
     font-size: 13px;
@@ -18,7 +16,7 @@
 #workspaces {
   border-radius: 10px 10px 10px 10px;
   margin: 5px;
-  background: @background;
+  background: #101010;
   margin-left: 0.1rem;
 }
 
@@ -49,7 +47,7 @@
 #language,
 #custom-lock,
 #custom-power {
-  background-color: @background;
+  background-color: #101010; 
   padding: 0.5rem 1rem;
   margin: 5px 0;
   border-radius: 10px 10px 10px 10px;
